fixed box size and decided against align=center

--- a/pixel.css
+++ b/pixel.css
@@ -31,10 +31,11 @@ body {
 
 #gameboard {
   margin: 2px 2px 2px 2px;
-  width: 500px;
-  height: 400px;
+  width: 300px;
+  height: 250px;
   border: 1px black solid;
   padding: 2px 2px 2px 2px;
+  box-sizing: border-box;
 }
 
 #restart {
